<resources>
    <string name="app_name">onHand Inventory</string>

    <!-- Login -->
    <string name="logo">onHand</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="createAccount">Create Account</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="invalid_username_password_toast">Invalid Email or password.</string>
    <string name="account_not_created">Account not created. Something went wrong. Try again.</string>

    <!-- Inventory -->
    <string name="text_updates">Text Updates</string>
    <string name="minus">-</string>
    <string name="quantity">%1$d</string>
    <string name="plus">+</string>
    <string name="delete">Delete</string>
    <string name="name">%1$s</string>
    <string name="imageDescription">Inventory Item</string>
    <string name="addFAB">Add Item</string>

    <!-- Item Details -->
    <string name="item_name_autofill">Item Name</string>
    <string name="quantity_autofill">Quantity</string>
    <string name="description_autofill">Item Description</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <!-- Delete is in inventory already :) -->

    <!-- SMS Updates -->
    <string name="sms_info_text">Receive SMS updates on low inventory when stock amount is:</string>
    <string name="get_updates">Get Updates</string>
    <string name="low_inventory">Low Inventory Amount</string>
    <string name="null_inventory_update">Please input a low inventory amount above.</string>
    <string name="low_inventory_toast">%1$s is low on inventory!</string>
</resources>